--- a/Resources/index.html
+++ b/Resources/index.html
@@ -55,7 +55,7 @@
         <div class="box">
           <h3 class="title">Summary: Latitude vs. X</h3>
           <hr>
-          <img src="images/City Lattitude vs Max Temperature.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
+          <img src="images/City Lattitude vs Max Temperature.png" class="vizualization rounded float-left" alt="Max Temperature">
           <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To
             accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over
             500 cities.</p>
@@ -76,12 +76,12 @@
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="max_temperature.html">
-                  <img class="panel" src="images/City Lattitude vs Max Temperature.png" alt="Max Temperature">
+                  <img class="panel" src="images/Fig1.png" alt="Max Temperature">
                 </a>
               </div>
               <div class="col-6">
                 <a href="humidity.html">
-                  <img class="panel" src="images/City Latitude vs Humidity.png" alt="Humidity">
+                  <img class="panel" src="images/Fig2.png" alt="Humidity">
                 </a>
               </div>
             </div>
@@ -89,12 +89,12 @@
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="cloudiness.html">
-                  <img class="panel" src="images/City Latitude vs Cloudiness.png" alt="Cloudiness">
+                  <img class="panel" src="images/Fig3.png" alt="Cloudiness">
                 </a>
               </div>
               <div class="col-6">
                 <a href="wind_speed.html">
-                  <img class="panel" src="images/City Lattitude vs Wind Speed.png" alt="Wind Speed">
+                  <img class="panel" src="images/Fig4.png" alt="Wind Speed">
                 </a>
               </div>
 
